kubernetes/pingdatagov-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingdatagov
  name: pingdatagov
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingdatagov
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: pingdatagov
    spec:
      containers:
      - env:
        - name: PING_IDENTITY_ACCEPT_EULA
          valueFrom:
            configMapKeyRef:
              key: PING_IDENTITY_ACCEPT_EULA
              name: env-vars
        - name: SERVER_PROFILE_PATH
          value: pingdatagovernance
        - name: SERVER_PROFILE_URL
          value: https://github.com/cprice-ping/DG-Test-Harness.git
        - name: USER_BASE_DN
          valueFrom:
            configMapKeyRef:
              key: USER_BASE_DN
              name: env-vars
        image: pingidentity/pingdatagovernance:8.1.0.0-EA-edge
        imagePullPolicy: "Always"
        name: pingdatagov
        ports:
        - containerPort: 443
        - containerPort: 636
        resources: {}
        volumeMounts:
      restartPolicy: Always
      serviceAccountName: ""
status: {}
