kubernetes/pingadminconsoles-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public-passthrough
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: pingadminconsoles-ingress
  namespace: ping-cloud-devops-eks-cprice
spec:
  # Use the AWS Route53 FQDNs to access the Admin Consoles
  rules:
  # This rule gives external access to the PingData Admin Console
  - host: pingdataconsole-ping-cloud-devops-eks-cprice.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingdataconsole
          servicePort: 8443
  # This rule gives external access to the PingDirectory ConfigAPI
  - host: pingdirectory-ping-cloud-devops-eks-cprice.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingdirectory
          servicePort: 443
  # This rule gives external access to the PingDataGov ConfigAPI
  - host: pingdatagov-ping-cloud-devops-eks-cprice.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingdatagov
          servicePort: 443
